assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Roboto+Condensed:wght@300;400&display=swap');

* {
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
    color: #faebd7;
}

a:visited {
    color: #faebd7;
}

a:hover {
    color: #faebd7;
}

/* -------------------------------- Header ----- General ---- */

#header {
border-bottom: 1px solid #454545;
padding-top: 30px;
padding-bottom: 20px;
margin-top: 30px;
width: 100%;
    background-image: url('../images/nynne-schroder-nMdC42MrwN8-unsplash.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 0.5;
    position: relative;
}

.stickyheader {
        overflow: hidden;
        background-color: #785964;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1000;
}

/* ---------------------------------------------------------------------------------------------- Header text and container -- */

.cover-text {
    margin-top: 20px;
    font-size: 46px;
  letter-spacing: 4px;
  padding-top: 38px;
  border-radius: 15px;
  background-color: rgba(120, 89, 100, 0.7);
}

.cover-text a {
    color: #faebd7;
    opacity: 1;
    text-decoration: none;
}

.cover-text a:active {
        color: #faebd7;
}

.cover-text a:hover {
    color: #faebd7;
    opacity: 1;
}

.name {
    font-family: "Raleway", sans-serif;
    font-weight: 700;
    font-size: 40px;
    text-transform: uppercase;
    letter-spacing: 3px;
    padding: 10px;
    position: relative;
    z-index: 1;
}

.name h1 a {
    text-decoration: none;
    color: #faebd7;
}

.name h1 a:visited {
    color: #faebd7;
}

.name h1 a:focus{
    color: #faebd7;
    outline: none;
}

.title {
    text-align: center;
    font-family: "Roboto Condensed", sans-serif;
    font-weight: 300;
    font-size: 25px;
    letter-spacing: 2px;
    line-height: 20px;
    padding-bottom: 30px;
    position: relative;
    z-index: 1;
}

.title h2 a {
    text-decoration: none;
    color: #faebd7;
}

.title h2 a:visited {
    color: #faebd7;
}

/* --------------------------------------------------------------------------- Header Social Links --- */

.social {
    margin: 0 auto;
    padding-left: 40px;
    text-decoration: none;
}

.social-links {
    padding-bottom: 15px;
    margin-top: 30px;
    margin-right: 40px;
    margin-left: 50px;
    text-align: center;
    text-decoration: none;
}

.social-links li a i {
    box-shadow: none;
    width: 35px;
    height: 35px;
    padding-top: 13px;
    margin-right: 2px;
    margin-bottom: 3px;
    border-radius: 50%;
    font-size: 12px;
    line-height: 7px;   
position: relative;
display: block;
    color: #faebd7;
    background-color: #785964;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
    color: #785964;
    background-color: #faebd7;
    text-decoration: none;
}

.social-links a {
    text-decoration: none;
}

/*------------------------------------------------------------------------Navigation bar  --- General styling --*/
.navcontainer {
    margin: 0 auto;
    width: 100%;
    text-align: center;
    background-color: #785964;
    padding-bottom: 10px;
}

.list-inline {
    color: #faebd7;
}

.iconsize {
    display: inline;
    font-size: 18px;
}

.menucontainer {
    font-size: 0;
    width: 100%;
}

#nav {
    margin: 0;
}

#nav li {
    font-size: 14px;
    padding: 0;
}

/* -------------------------------------------------------------------------------------------- Navigation bar : Hover Colours -- */

.list-inline-item a:hover {
    color: #454545;
}

.iconsize:hover {
    color:#454545;
}

/* ----------------------------------------------------------------------------------------------- Navigation bar items styling --- */ 

.menuitem {
    margin-top: 10px;
    padding-top: 10px;
    height: 20px;
    text-align: center;
padding: 0;
}

.menuitem a {
    width: 100%;
    text-decoration: none;
    padding-bottom: 15px;
    color: #faebd7;
    height: 50px;
}

.menuitem a i {
    padding-top: 11px;
    display: inline;
    color: #faebd7;
    font-size: 15px;
}

.menuitem span {
    display: block;
    width: 100%;
    padding-top: 5px;
    text-align: center;
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 400;
    letter-spacing: 2px;
}

/*---------------------------------------------------------------------------------------------------------Main body styling */

section {
    background-color: #faebd7;
}

.colortest {
    background-color: #faebd7;
}

.maincontent {
    padding-bottom: 30px;
    background-color: #faebd7;
}

.sectionheadings {
    height: 40px;
    width: 100%;
    background-color: #785964;
    color: #faebd7;
    line-height: 8px;
    letter-spacing: 2px;
    font-weight: 400;
    font-family: 'raleway', sans-serif;
    margin-bottom: 15px;;
    padding-top: 3px;
    padding-bottom: 3px;
    text-align: center;
}

.sectionheadings h3 {
    margin: 0 auto;
    width: 100%;
}

.topofpage {
    text-align: center;
    font-family: "Roboto condensed", sans-serif;
    font-size: 18px;
    font-weight: 500;
    padding-bottom: 20px;
    margin: 0 auto;
    background-color: #faebd7;
}

  /*-------------------------------------------------------------Page jumps --------------*/
  .pagejumps {
    padding: 10px;
  }

 .jumpbutton {
    background-color: #785964;
    border: 1px solid #faebd7;
    color: #faebd7;
    padding: 5px 10px;
    border-radius: 5px;
 }

 form {
    display: inline;
 }

/* ----------------------------------------- Footer general styling --- */

footer {
    height: 100px;
    background-color: #785964;
    margin: 0 auto;
    text-align: center;
    padding-top: 15px;
}
/* ... */

